<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.powergrid.victor.infraredpowergrid.infrared.activity.HomeActivity">

    <RelativeLayout
        android:id="@+id/home_user_area"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_gray">

        <TextView
            android:id="@+id/home_user_area_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/home_user_area_label"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/home_user_area_user1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_user_area_label"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/home_user_area_user1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/home_user1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/home_user_area_user1"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/home_user_area_user1"
            android:hint="@string/home_user_area_user2_hint"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/home_user1_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/home_user_area_user1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_person_add"
            android:drawablePadding="5dp"
            android:text="@string/home_user_area_person_add"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/home_user_area_user2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_user_area_user1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/home_user_area_user2"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/home_user2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/home_user_area_user2"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/home_user_area_user2"
            android:hint="@string/home_user_area_user1_hint"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/home_user2_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/home_user_area_user2"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_person_add"
            android:drawablePadding="5dp"
            android:text="@string/home_user_area_person_add"
            android:textSize="14sp" />

        <Button
            android:id="@+id/home_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_user_area_user2"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/home_user_area_clear" />

        <Button
            android:id="@+id/home_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/home_user_area_user2"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/home_user_area_modify" />

    </RelativeLayout>

    <Button
        android:id="@+id/home_into_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_user_area"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/home_into_measure" />

    <Button
        android:id="@+id/home_history_export"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/home_user_area"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/home_history_export" />

</RelativeLayout>
